# PCB_strain_gauge

./: .gitignore  1Library.kicad_sym  LICENSE  README.md  fp-lib-table  strain_gauge_3.kicad_pcb  strain_gauge_3.kicad_prl  strain_gauge_3.kicad_pro  strain_gauge_3.kicad_sch  sym-lib-table
1Library.pretty/: MOUDLE14P-SMD-2.54-21X17.8MM.kicad_mod  bridge.kicad_mod  bridge_rotated.kicad_mod  slot.kicad_mod  texture.kicad_mod
firmware/: .gitignore  CMakeLists.txt  strain.c
output/: ibom.html  strain.uf2
scripts/: draw_footprint.ipynb  graph.py
